--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,13 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.10"
 fastapi = "^0.81.0"
 uvicorn = {extras = ["standard"], version = "^0.18.3"}
+SQLAlchemy = "^1.4.40"
+alembic = "^1.8.1"
+pydantic = "^1.10.1"
+python-dotenv = "^0.21.0"
+psycopg2-binary = "^2.9.3"
+rsa = "^4.9"
+
 
 [tool.poetry.dev-dependencies]
 black = "^22.8.0"
