--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ pydantic = "^1.10.1"
 python-dotenv = "^0.21.0"
 psycopg2-binary = "^2.9.3"
 rsa = "^4.9"
+ipfshttpclient = "^0.7.0"
+pycryptodome = "^3.15.0"
 
 
 [tool.poetry.dev-dependencies]
