--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,28 @@
-version: '3'
+version: "3"
+
 services:
-  ipfs:
-    image: ipfs/go-ipfs:v0.4.23
-    environment:
-      - IPFS_PROFILE=server
-      - IPFS_PATH=/ipfsdata
-    volumes:
-      - ./data/ipfs:/ipfsdata
-    ports:
-      - "4001:4001"
-      - "127.0.0.1:8080:8080"
-      - "127.0.0.1:8081:8081"
-      - "127.0.0.1:5001:5001"
+  custody:
+    image: ghcr.io/merklebot/custody:main
+    networks:
+      - internal
+    deploy:
+      labels:
+        - traefik.http.routers.custody.rule=PathPrefix(`/custody`)
+        - traefik.http.services.custody.loadbalancer.server.port=8000
+
+  # ipfs:
+  #   image: ipfs/go-ipfs:v0.4.23
+  #   environment:
+  #     - IPFS_PROFILE=server
+  #     - IPFS_PATH=/ipfsdata
+  #   volumes:
+  #     - ./data/ipfs:/ipfsdata
+  #   ports:
+  #     - "4001:4001"
+  #     - "127.0.0.1:8080:8080"
+  #     - "127.0.0.1:8081:8081"
+  #     - "127.0.0.1:5001:5001"
+
+networks:
+  internal:
+    external: true # externally created
