Remove export keyword from .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-export DATABASE_URL="postgresql://USERNAME:PASSWORD@localhost/custody"
+DATABASE_URL="postgresql://USERNAME:PASSWORD@localhost/custody"
