Remove root path in favor of serving on subdomain

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,12 +10,10 @@ services:
     deploy:
       labels:
         - traefik.http.routers.custody.entrypoints=websecure
-        - traefik.http.routers.custody.rule=Host(`api2.merklebot.com`) && PathPrefix(`/custody`)
+        - traefik.http.routers.custody.rule=Host(`custody.api.merklebot.com`)
         - traefik.http.routers.custody.tls=true
         - traefik.http.routers.custody.tls.certresolver=letsencrypt
         - traefik.http.services.custody.loadbalancer.server.port=8000
-        - traefik.http.middlewares.strip-custody.stripprefix.prefixes=/custody
-        - traefik.http.routers.custody.middlewares=strip-custody@docker
 
 networks:
   internal:
