Custody logic pivot

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
-DATABASE_URL="postgresql://USERNAME:PASSWORD@localhost/custody"
-CRUST_MNEMONIC=""
-IPFS_ADDRESS=""
+INSTANT_STORAGE_REGION=
+INSTANT_STORAGE_ENDPOINT=
+INSTANT_STORAGE_ACCESS_KEY=
+INSTANT_STORAGE_SECRET_ACCESS_KEY=
+INSTANT_STORAGE_BUCKET_NAME=
+
+
+PUBLIC_STORAGE_REGION=
+PUBLIC_STORAGE_ENDPOINT=
+PUBLIC_STORAGE_ACCESS_KEY=
+PUBLIC_STORAGE_SECRET_ACCESS_KEY=
+PUBLIC_STORAGE_BUCKET_NAME=
+
+VAULT_TOKEN=
+VAULT_ADDRESS=
+IPFS_HTTP_PROVIDER=
