--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,4 @@
-version: "3.8"
-
 services:
   custody:
+    build: .
     env_file: .env
-
-  postgres:
-    image: postgres:15
-    environment:
-      - POSTGRES_SERVER=custody_postgres
-      - POSTGRES_USER=merklebot
-      - POSTGRES_PASSWORD=merklebot
-      - POSTGRES_DB=custody
