--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,9 @@ ipfshttpclient = "^0.7.0"
 pycryptodome = "^3.15.0"
 aioipfs = "^0.5.8"
 hvac = "^1.1.0"
-aioboto3 = "^11.2.0"
 httpx = "^0.24.0"
+boto3 = "^1.28.30"
+pytest = "^7.4.0"
 
 
 [tool.poetry.dev-dependencies]
