Add loki logging

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -23,7 +23,7 @@ services:
       - "127.0.0.1:5001:5001"
 
   logger:
-    image: grafana/grafana
+    image: grafana/grafana:latest
     logging:
       driver: loki
       options:
