Format logs with json formatter

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ hvac = "^1.1.0"
 httpx = "^0.24.0"
 boto3 = "^1.28.30"
 pytest = "^7.4.0"
+python-json-logger = "^2.0.7"
 
 
 [tool.poetry.dev-dependencies]
