--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ httpx = "^0.24.0"
 boto3 = "^1.28.30"
 pytest = "^7.4.0"
 python-json-logger = "^2.0.7"
+tqdm = "^4.66.1"
 
 
 [tool.poetry.dev-dependencies]
